--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,12 +3,11 @@
 ##                                                                            ##
 ##                    SaferWater Configuration for Bukkit                     ##
 ##                                                                            ##
-## SOURCE CODE: https://github.com/bspfsystems/SaferWater/                    ##
-## BUGS / ISSUES: https://github.com/bspfsystems/SaferWater/issues/           ##
+## SOURCE CODE: https://github.com/unixminecraft/SaferWater/                  ##
 ##                                                                            ##
 ## New configuration items will not be added to this file automatically. You  ##
 ## can obtain an update version of the default config.yml file from           ##
-## https://bspfsystems.org/config-files/saferwater/bukkit/                    ##
+## the repository in the "src/main/resources" folder.                         ##
 ##                                                                            ##
 ## This file may also be called "saferwater.yml". If both "saferwater.yml"    ##
 ## and "config.yml" are present in this plugin's configuration directory, the ##
